--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -34,21 +34,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light border custom-nav">
-        <!-- Logo -->
-        <p class="navbar-brand">FLACK</p>
-        <!-- Hamburger icon -->
-        <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
-            data-target="#navbar" data-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- Navbar -->
-        <div class="collapse navbar-collapse" id="navbar">
-            <ul class="navbar-nav ml-auto mt-2">
-                <li class="nav-item"><a class="nav-link" href="https://github.com/minhajul-karim/flack">View code</a>
-                </li>
-            </ul>
-        </div>
+    <nav id="signup-header-nav">
+        <ul class="list-inline">
+            <li class="list-inline-item font-weight-bold">Flack</li>
+        </ul>
     </nav>
 
     <!-- Sign up form -->
