--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -254,13 +254,14 @@ $breakpoint-mobile: 599px;
     margin: 10px 0 0 10px;
   }
 
-  .image-container {
-    display: flex;
-    flex-wrap: wrap;
+  .image-container div {
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    float: left;
+    margin: 10px 10px 10px 0;
     img {
-      width: 200px;
-      margin: 10px;
-      cursor: pointer;
+      width: 100%;
     }
   }
 
