--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -40,23 +40,25 @@
         </ul>
     </nav>
 
-    <!-- Sign up form -->
-    <div class="container mt-5" id="signup-area">
-        <div class="row">
-            <div class="col">
-                <div id="registration-area">
-                    <h1 class="display-4 py-2">Sign Up</h1>
-                    <form action="#" method="POST" id="reg_form">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Enter your name" name="name" id="name"
-                                required autofocus>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-lg" id="name-button">Enter</button>
-                    </form>
-                </div>
+    <div id="signup-wrapper">
+        <h1 class="display-4 py-2">Sign Up</h1>
+        <form action="#" method="POST" id="reg_form">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Enter your name" name="name" id="name" required
+                    autofocus>
             </div>
+            <button type="submit" class="btn btn-primary btn-lg" id="name-button">Enter</button>
+        </form>
+        <div id="signup-footer-nav">
+            <ul class="list-inline text-center">
+                <li class="list-inline-item"><a class="text-center" href="#"><small>View Code</small></a></li>
+                <li class="list-inline-item"><a class="text-center" href="#"><small>Report a bug</small></a>
+                </li>
+                <li class="list-inline-item"><a class="text-center" href="#"><small>Privacy</small></a></li>
+            </ul>
         </div>
     </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
