--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,27 @@ p {
   overflow: hidden;
   padding: 10px 20px;
   color: #fff;
+  margin-bottom: 20vh;
+}
+
+#signup-wrapper {
+  width: 300px;
+  min-height: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding-bottom: 150px;
+  position: relative;
+}
+
+#signup-wrapper .form-control {
+  display: inline-block;
+}
+
+#signup-footer-nav {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 #home-header-nav {
@@ -34,26 +55,18 @@ p {
   float: right;
 }
 
-#signup-area {
-  text-align: center;
-}
-
-#signup-area .form-control {
-  display: inline-block;
-  width: 300px;
-}
-
 #chat-page {
   max-width: 100% !important;
 }
 
 #left-side {
   background-color: #3f0e40;
-  height: calc(100vh - 44px);
+  min-height: calc(100vh - 44px);
   width: 260px;
   float: left;
   color: #fffafa;
   position: relative;
+  overflow-y: auto;
 }
 
 #left-side .fa-circle {
@@ -75,6 +88,11 @@ p {
   font-size: 15px;
   margin-left: 130px;
   cursor: pointer;
+}
+
+#left-side #rooms {
+  height: calc(100vh - 152px);
+  overflow-y: auto;
 }
 
 #left-side #rooms p {
@@ -102,7 +120,7 @@ p {
   background-color: #007bff;
 }
 
-#left-side #new-room-form h5 {
+#left-side #new-room-form h4 {
   color: #000;
 }
 
@@ -110,15 +128,26 @@ p {
   font-weight: normal;
 }
 
+#left-side #channel-text {
+  color: #808080;
+}
+
+#left-side #room-error {
+  display: none;
+  color: red;
+}
+
 #left-side #footer-nav {
   position: absolute;
-  left: 5%;
+  left: 0;
+  right: 0;
   bottom: 0;
   padding: 10px;
 }
 
 #left-side #footer-nav a {
   color: #fff;
+  text-decoration: none;
 }
 
 #right-side {
@@ -138,7 +167,7 @@ p {
 
 #right-side #message-area {
   width: 100%;
-  height: calc( 100vh - ( 44px + 28px + 55px + 54px + 60px ));
+  height: calc( 100vh - ( 44px + 28px + 100px + 54px + 60px ));
   overflow-y: auto;
   padding: 15px 0 0 15px;
 }
@@ -183,9 +212,33 @@ p {
   position: relative;
 }
 
+#right-side #thumbnails {
+  white-space: nowrap;
+  overflow: auto;
+  padding: 5px;
+  border-top: 1px solid #eee;
+  display: none;
+}
+
+#right-side #thumbnails .image-div {
+  width: 100px;
+  height: 100px;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+}
+
+#right-side #thumbnails img {
+  width: 100%;
+  opacity: 1;
+}
+
+#right-side #thumbnails .image-div:hover img {
+  opacity: 0.5;
+}
+
 #right-side #icons-area {
   width: 100%;
-  position: relative;
   position: absolute;
   left: 0;
   top: 100%;
@@ -203,26 +256,18 @@ p {
 
 #right-side #icons-area i {
   font-size: 20px;
-  margin-right: 20px;
+  margin-right: 15px;
   margin-top: 10px;
   color: #007bff;
   cursor: pointer;
 }
 
 #right-side textarea {
-  height: 55px;
+  height: 100px;
   resize: none;
   border-bottom: 0 !important;
   border-radius: 5px 5px 0 0 !important;
   outline: none !important;
-}
-
-#right-side #newline-instruction {
-  position: absolute;
-  left: 0;
-  top: 70px;
-  display: none;
-  margin: 10px 0 0 10px;
 }
 
 #right-side .image-container div {
@@ -243,26 +288,29 @@ p {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  height: 8px;
+  width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #007bff;
+  border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #2980b9;
 }
 
 @media (max-width: 599px) {
-  #signup-area .form-control {
+  #signup-wrapper .form-control {
     width: auto;
   }
   #left-side {
@@ -273,6 +321,12 @@ p {
   }
   #right-side {
     width: calc(100% - 150px);
+  }
+}
+
+@media all and (min-width: 1025px) {
+  #signup-wrapper {
+    padding-bottom: 250px;
   }
 }
 /*# sourceMappingURL=style.css.map */
