--- a/templates/home.html
+++ b/templates/home.html
@@ -66,16 +66,12 @@
                                 </div>
                                 <div class="modal-body">
                                     <p class="mb-2" id="channel-text">Channels are where your team communicates. They’re
-                                        best when
-                                        organized around a
-                                        topic — #marketing, for example.</p>
-                                    <small id="room-error" class="text-center">
-                                        Channel already exists!
-                                    </small>
+                                        best when organized around a topic — #marketing, for example.</p>
+                                    <small class="error-message"></small>
 
                                     <div class="form-group mt-4">
                                         <input type="text" class="form-control" id="room-name"
-                                            placeholder="e.g. #marketing" autocomplete="off" autofocus required />
+                                            placeholder="e.g. #marketing" autocomplete="off" autofocus required>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
@@ -206,15 +202,16 @@
     </script>
     <script src="{{ url_for('static', filename='js/index.js') }}"></script>
     <script>
+        // Clear error message and unsuccessful room name
+        // every time new room form appears
         $(document).ready(function () {
-            // Clear previous room name or any error messages while creating new rooms
-            $("#create-room-form").on("show.bs.modal", function (event) {
-                document.querySelector("#room-error").style.display = "none";
-                document.querySelector("#room-name").value = "";
+            $('#create-room-form').on('show.bs.modal', function (event) {
+                document.querySelector('.error-message').style.display = 'none';
+                document.querySelector('#room-name').value = '';
             });
 
-            $("#create-room-form").on("shown.bs.modal", function () {
-                $("#room-name").trigger("focus");
+            $('#create-room-form').on('shown.bs.modal', function () {
+                $('#room-name').trigger('focus');
             });
         });
     </script>
