--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.ico') }}" />
 
@@ -67,7 +68,7 @@
                                 <div class="modal-body">
                                     <p class="mb-2" id="channel-text">Channels are where your team communicates. They’re
                                         best when organized around a topic — #marketing, for example.</p>
-                                    <small class="error-message"></small>
+                                    <small class="error-message text-center"></small>
 
                                     <div class="form-group mt-4">
                                         <input type="text" class="form-control" id="room-name"
