--- a/templates/home.html
+++ b/templates/home.html
@@ -35,9 +35,8 @@
     <div id="main-area">
         <div id="left-side">
             <div id="user-info">
-                <p id="username">
-                    <i class="fas fa-circle"></i>
-                </p>
+                <i class="fas fa-circle"></i>
+                <p id="loggedin-user"></p>
             </div>
             <div id="rooms">
                 <p id="channels-header" class="mb-2">
