--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -305,12 +305,13 @@ $breakpoint-large-screen: 1025px;
   // Image in messages
   .image-container div {
     width: 200px;
-    height: 200px;
+    height: 100px;
     overflow: hidden;
     float: left;
-    margin: 10px 10px 10px 0;
+    margin: 0px 10px 10px 0;
     img {
       width: 100%;
+      cursor: pointer;
     }
   }
 
