--- a/templates/home.html
+++ b/templates/home.html
@@ -86,9 +86,12 @@
             </div>
             <div id="footer-nav">
                 <ul class="list-inline text-center">
-                    <li class="list-inline-item"><a class="text-center" href="#"><small>View Code</small></a></li>
-                    <li class="list-inline-item"><a class="text-center" href="#"><small>Report a bug</small></a></li>
-                    <li class="list-inline-item"><a class="text-center" href="#"><small>Privacy</small></a></li>
+                    <li class="list-inline-item"><a class="text-center"
+                            href="https://github.com/minhajul-karim/flack/"><small>View Code</small></a></li>
+                    <li class="list-inline-item"><a class="text-center"
+                            href="https://github.com/minhajul-karim/flack/issues"><small>Report a bug</small></a></li>
+                    <li class="list-inline-item"><a class="text-center"
+                            href="https://github.com/minhajul-karim/flack#privacy"><small>Privacy</small></a></li>
                 </ul>
             </div>
         </div>
