--- a/templates/home.html
+++ b/templates/home.html
@@ -86,12 +86,14 @@
             </div>
             <div id="footer-nav">
                 <ul class="list-inline text-center">
+                    <li class="list-inline-item"><a class="text-center" href="https://github.com/minhajul-karim/flack/"
+                            target="_blank"><small>View Code</small></a></li>
                     <li class="list-inline-item"><a class="text-center"
-                            href="https://github.com/minhajul-karim/flack/"><small>View Code</small></a></li>
+                            href="https://github.com/minhajul-karim/flack/issues" target="_blank"><small>Report a
+                                bug</small></a></li>
                     <li class="list-inline-item"><a class="text-center"
-                            href="https://github.com/minhajul-karim/flack/issues"><small>Report a bug</small></a></li>
-                    <li class="list-inline-item"><a class="text-center"
-                            href="https://github.com/minhajul-karim/flack#privacy"><small>Privacy</small></a></li>
+                            href="https://github.com/minhajul-karim/flack#privacy"
+                            target="_blank"><small>Privacy</small></a></li>
                 </ul>
             </div>
         </div>
